--- a/fe/src/app/dev-mode-common/formula-code-editor/formula-code-editor.component.scss
+++ b/fe/src/app/dev-mode-common/formula-code-editor/formula-code-editor.component.scss
@@ -1,6 +1,6 @@
 .formula-code-editor {
     height: 22px;
-    min-width: 800px;
+    min-width: 825px;
     width:100%;
     height:100%;
     white-space: nowrap;
